--- a/styles.css
+++ b/styles.css
@@ -4,21 +4,50 @@ white
 */
 
 
+
+  /* styling for navigation bar*/
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+}
+
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #00356a;
+  color: white;
+}
+.topnav-right {
+  float: right;
+}
 body{
-    background-color: rgb(10, 133, 214);
+    background-color: rgb(222, 219, 219);
+    word-wrap: normal;
+    margin-right: 10%;
+    margin-left: 10%;
+    
+    
 }
 li{
     list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display:inline;
 
   }
-  #header{
-    background-color: bisque;
+table{
+    margin-bottom: 20%;
+    margin-left: auto;
+    background-color: beige;
   }
-  table{
-  
-    margin-left: 50px;
-    ;
-  }
+
