--- a/styles.css
+++ b/styles.css
@@ -3,36 +3,13 @@ white
 
 */
 
+#n1{
+  color: red;
 
-
-  /* styling for navigation bar*/
-.topnav {
-    background-color: #333;
-    overflow: hidden;
+  font-family: 'Times New Roman' ;
+  
 }
 
-
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #00356a;
-  color: white;
-}
-.topnav-right {
-  float: right;
-}
 body{
     background-color: rgb(222, 219, 219);
     word-wrap: normal;
