--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,10 @@ white
 
 #n1{
   color: red;
-
-  font-family: 'Times New Roman' ;
+  font-size: 300%;
+  font-family:cursive;
+  text-align: center;
+  text-shadow: 5ch;
   
 }
 
