--- a/styles.css
+++ b/styles.css
@@ -3,26 +3,153 @@ white
 
 */
 
-#n1{
-  color: #000;
-  font-size: 300%;
-  font-family:Big Caslon;
-  text-align: left;
-  text-shadow: 5ch;
-  
-}
-#n2{
-  text-align: left;
-  font-size: 150%;
-  font-family: Big Caslon;
-}
-#n3{
-  text-align: left;
-  font-size: 100%;
-  font-family: Big Caslon;
-  
 
+* {
+  margin: 0;
+  padding: 0;
 }
+
+.container {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  scroll-behavior: smooth;
+  background: 2839313;
+  font-family:Big Caslon;
+}
+
+h1 a {
+font-size: 80px;
+color:#B69D74;
+text-decoration: none;
+text-transform: uppercase;
+}
+h2{
+font-size: 40px;
+color:#B69D74;
+text-decoration: none;
+text-transform: uppercase;
+text-align: center;
+}
+
+.popover {
+ display: none;
+ box-shadow: 0px 6px 8px #B69D74;
+}
+
+.popover:target {
+position: absolute;
+right: 0;
+top: 0;
+width: 100%;
+height: 100%;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.popover .content {
+display: flex;
+align-items: center;
+justify-content: center;
+position: relative;
+width: 0;
+height: 0;
+color: #fff;
+background-color:#B69D74;
+animation: 1s grow ease forwards;
+text-align: center;
+}
+
+.nav_list  {
+list-style-type: none;
+}
+
+.nav_list a {
+text-decoration: none;
+font-size: 50px;
+color: rgb(0, 0, 0);
+}
+
+.nav_list_item {
+height: 100%;
+overflow: hidden;
+}
+
+.nav_list li {
+padding: 15px 0;
+text-transform: uppercase;
+transform: translateY(200px);
+opacity: 0;
+animation: 2s slideUp ease forwards .5s;
+position: relative;
+}
+
+.nav_list li::before {
+content: '';
+position: absolute;
+height: 2px;
+width: 0px;
+left: 0;
+bottom: 10px;
+background: #000000; 
+transition: all .5s ease;
+}
+
+.nav_list li:hover:before {
+    width: 100%;
+}
+
+.popover p {
+padding: 50px;
+opacity: 0;
+animation: 1s fadeIn ease forwards 1s;
+}
+
+.popover .close::after {
+right: 0;
+top: 0;
+width: 50px;
+height: 50px;
+position: absolute;
+display: flex;
+z-index: 1;
+font-size: 30px;
+align-items: center;
+justify-content: center;
+background-color: #000000;
+color: #fff;
+content: "×";
+cursor: pointer;
+opacity: 0; 
+animation: 1s fadeIn ease forwards .5s;
+}
+
+@keyframes grow {
+100% {
+  height: 90%;
+  width: 90%;
+}
+}
+
+@keyframes fadeIn {
+100% {
+opacity: 1;
+}
+}
+
+@keyframes slideUp {
+100% {
+  transform: translateY(0);
+  opacity: 1;
+}
+}
+
+
+
+
+
 img{
   border-radius: 25px;
 
@@ -31,7 +158,7 @@ html{
   background-color: #1F2839;
 }
 
-body{
+wbody{
     background-color: #B69D74;
     word-wrap: normal;
     margin-right: 10%;
