--- a/styles.css
+++ b/styles.css
@@ -156,12 +156,7 @@ li{
     list-style-type: none;
 
   }
-table{
-    margin-bottom: 20%;
-    margin-left: auto;
-    background-color: beige;
-    text-shadow: 10px 10px 10px rgb(212, 212, 212);
-  }
+
 .title{
   font-family:'Times New Roman';
   font-size: 80px;
@@ -175,8 +170,62 @@ table{
 .content{
   color: #fff;
 }
-#img{
-  width: 50px;
-  height: 50px;
+.slidebox{
+    width: 1000px;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    overflow: hidden;
+    border: 1px solid #000000;
+    box-shadow: -1px 5px 15px black;
+}
+.slides{
+  width: 100%;
+    display: flex;
+    animation: slide 20s infinite;
+}
+img{
+  width: 100%;
 }
 
+@keyframes slide{
+  0%{
+      transform: translateX(0);
+  }
+  25%{
+      transform: translateX(0);
+  }
+  30%{
+      transform: translateX(-100%);
+  }
+  50%{
+      transform: translateX(-100%);
+  }
+  55%{
+      transform: translateX(-200%);
+  }
+  75%{
+      transform: translateX(-200%);
+  }
+  80%{
+      transform: translateX(-300%);
+  }
+  100%{
+      transform: translateX(-300%);
+  }
+}
+
+.schoollink{
+  opacity: 10;
+  position: absolute;
+  width: 150%;
+  font-size: 3rem;
+  z-index: 100;
+  top: 50%;
+  left: 2em;
+  text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.372);
+}
+a:link{
+  color: #fff;
+}
