--- a/styles.css
+++ b/styles.css
@@ -226,6 +226,19 @@ img{
   left: 2em;
   text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.372);
 }
-a:link{
-  color: #fff;
+mark{
+  color: rgb(0, 0, 0);
+  text-shadow: 10px 10px 10px rgb(0, 0, 0);
+  border-radius: 8px;
+  font-style: italic;
+  background-color:rgba(255, 255, 255, 0);
+  
+}
+a:visited, a:link, a:active
+{
+    text-decoration: none;
+}
+a:hover{
+  text-decoration: underline;
+  
 }
