css for contact and education updated

--- a/styles.css
+++ b/styles.css
@@ -159,19 +159,23 @@ li{
 
 .title{
   font-family:'Times New Roman';
-  font-size: 80px;
+  position: sticky;
+  font-size: 500%;
   color:#000000;
   text-transform:uppercase;
   text-align: center;
-  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-width: 20%;
   -webkit-text-stroke-color: #B69D74;
   text-shadow: 10px 10px 10px rgba(212, 212, 212, 0.372);
   }
 .content{
   color: #fff;
+  text-align: justify;
+  
 }
 .slidebox{
-    width: 1000px;
+    width: 50%;
+
     position: absolute;
     transform: translate(-50%,-50%);
     top: 50%;
@@ -219,8 +223,8 @@ img{
 .schoollink{
   opacity: 10;
   position: absolute;
-  width: 150%;
-  font-size: 3rem;
+  width: 50%;
+  font-size: 50px;
   z-index: 100;
   top: 50%;
   left: 2em;
@@ -238,7 +242,7 @@ a:visited, a:link, a:active
 {
     text-decoration: none;
 }
-a:hover{
-  text-decoration: underline;
-  
+#para{
+  text-align: justify;
+  position: absolute;
 }
