--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,19 @@
 white
 
 */
+/*icon urls*/
+@import url('https://css.gg/link.css');
+@import url('https://css.gg/instagram.css');
 
+html{
+  background-color: #1F2839;
+}
 
-* {
-  margin: 0;
-  padding: 0;
+body{
+  margin-left: 10%;
+  margin-right:10%;
+  margin-top: auto;
+  background-color: rgb(0, 136, 255);
 }
 
 .container {
@@ -148,9 +156,6 @@ opacity: 1;
   opacity: 1;
 }
 }
-html{
-  background-color: #1F2839;
-}
 
 li{
     list-style-type: none;
@@ -174,19 +179,18 @@ li{
   
 }
 .slidebox{
-    width: 50%;
-
+    width: 40%;
     position: absolute;
     transform: translate(-50%,-50%);
     top: 50%;
-    left: 50%;
+    margin-left: 20%;
     overflow: hidden;
     border: 1px solid #000000;
     box-shadow: -1px 5px 15px black;
 }
 .slides{
   width: 100%;
-    display: flex;
+    display:flex;
     animation: slide 20s infinite;
 }
 img{
@@ -219,30 +223,49 @@ img{
       transform: translateX(-300%);
   }
 }
-
-.schoollink{
-  opacity: 10;
-  position: absolute;
-  width: 50%;
-  font-size: 50px;
-  z-index: 100;
-  top: 50%;
-  left: 2em;
-  text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.372);
-}
-mark{
-  color: rgb(0, 0, 0);
-  text-shadow: 10px 10px 10px rgb(0, 0, 0);
-  border-radius: 8px;
-  font-style: italic;
-  background-color:rgba(255, 255, 255, 0);
   
-}
 a:visited, a:link, a:active
 {
-    text-decoration: none;
+    text-decoration: underline;
+    text-decoration-color: #fff;
+    color: #fff;
+}
+a:hover{
+  color: aqua;
+  font-style: italic;
 }
 #para{
   text-align: justify;
   position: absolute;
+  top: 80%;
+  width: 50em;      
+  background-color: rgb(4, 152, 201);       
+  border: 2px solid black;    
+  border-radius: 8px;  
+  padding: 10px;      
+  word-wrap: break-word;      
+  font-size: 20px;    
+}
+#slink{
+  position: relative;
+  margin-left: 20%;
+  top: -4%;
+}
+.linkwrapper{
+    position: relative;
+    width: 10%;
+    height: 30%;
+    padding: 20px;
+    top: 30%;
+    left: 52%;
+    border: 1px solid;
+}
+.gg-link {
+  color: aqua;
+  position: relative;
+}
+.gg-instagram {
+  color: aqua;
+  position: relative;
+  padding: 2px;
 }
