--- a/styles.css
+++ b/styles.css
@@ -2,48 +2,50 @@
 white
 
 */
-/*icon urls*/
-@import url('https://css.gg/link.css');
-@import url('https://css.gg/instagram.css');
-@import url('https://css.gg/youtube.css');
+/* font links */
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Marhey&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&display=swap');
 
 
-body{
-  margin-top: auto;
-  background-color: rgb(16, 55, 90);
+
+.name{
+  font-size: 10rem;
+  text-align: center;
+  font-family: 'Lobster';
+  background-image: linear-gradient(to bottom right, rgb(6, 142, 239), rgb(20, 233, 130));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  line-break: auto;
 }
-
+/* style for position/job role
+.role{
+  text-transform: uppercase;
+  font-size: 600%;
+  letter-spacing: 1.5rem;
+  z-index: -1;
+  font-family: monospace;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: .5px white;
+  line-break: auto;  
+} */
 .container {
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   scroll-behavior: smooth;
-  background: #1F2839;
-  font-family:'Times New Roman', Times, serif;
- 
+  /* background: #111111; */
+  font-family: 'Marhey', cursive; 
+  
 }
 
-h1 a {
-font-size: 80px;
-color:#000000;
-text-decoration: none;
-text-transform: uppercase;
--webkit-text-stroke-width: 2px;
--webkit-text-stroke-color: #B69D74;
-}
-h2{
-font-size: 40px;
-color:#B69D74;
-text-decoration: none;
-text-transform: uppercase;
-text-align: center;
-}
 
 .popover {
  display: none;
  box-shadow: 0px 6px 8px #B69D74;
-}
+ }
 
 .popover:target {
 position: absolute;
@@ -64,9 +66,19 @@ position: relative;
 width: 0;
 height: 0;
 color: #fff;
-background-color:#B69D74;
+background: #000000c6;
 animation: 1s grow ease forwards;
 text-align: center;
+border: 5px solid linear-gradient(to bottom right, rgb(0, 71, 121),rgb(0, 119, 62));
+}
+/* gradient border for the popup box */
+.border-gradient {
+  border: 10px solid;
+  border-image-slice: 1;
+  border-width: 2px;
+}
+.border-gradient-purple {
+  border-image-source: linear-gradient(to left, #743ad5, #d53a9d);
 }
 
 .nav_list  {
@@ -75,7 +87,10 @@ list-style-type: none;
 
 .nav_list a {
 text-decoration: none;
-font-size: 50px;
+font-size: 5rem;
+font-family: 'Chakra Petch', sans-serif;
+-webkit-text-fill-color: transparent;
+-webkit-text-stroke: 2px white;
 color: rgb(0, 0, 0);
 }
 
@@ -100,7 +115,7 @@ height: 2px;
 width: 0px;
 left: 0;
 bottom: 10px;
-background: #000000; 
+background: #ffffff; 
 transition: all .5s ease;
 }
 
@@ -125,7 +140,7 @@ z-index: 1;
 font-size: 30px;
 align-items: center;
 justify-content: center;
-background-color: #000000;
+background-color:#00000000;
 color: #fff;
 content: "x";
 cursor: pointer;
@@ -169,33 +184,27 @@ li{
   -webkit-text-stroke-color: #B69D74;
   text-shadow: 10px 10px 10px rgba(212, 212, 212, 0.372);
   }
-.content{
+/*.content{
   color: #fff;
   text-align: justify;
   
 }
-.cwrapper{/*for the content on educaton page*/
-  width: 320px;
-  height: 600px;
-  padding: 10px;
-  top: 10;
-  border:2px solid;
-  margin: 0;
-  position: relative;
-}
 .slidebox{
-    width: 200%;
+    width: 50%;
     position: absolute;
-    top: 50%;
-    margin-left: 20%;
+    top: 30%;
+    margin-left: -30%;
     overflow: hidden;
     border: 1px solid #000000;
     box-shadow: -1px 5px 15px black;
+    
 }
 .slides{
   width: 100%;
     display:flex;
     animation: slide 20s infinite;
+    object-fit: cover;
+
 }
 img{
   width: 100%;
@@ -226,39 +235,109 @@ img{
   100%{
       transform: translateX(-300%);
   }
-}
+}*/
   
 a:visited, a:link, a:active
 {
-    text-decoration: underline;
+    text-decoration: none;
     text-decoration-color: #fff;
     color: #fff;
 }
-a:hover{
-  color: aqua;
-  font-style: italic;
+
+
+h1 {
+  font-size: 4rem;
+  text-align: center;
+  
+
 }
-#para{
-  width: 200%;
-  position: absolute;
-  top: 100%;
-  margin-left: 18%;  
-  background-color: rgb(4, 152, 201);       
-  border: 2px solid black;    
-  border-radius: 8px;  
-  padding: 3%;      
-  word-wrap:break-word;      
-  font-size: 110%;    
+/* class for h2 on education page */
+.h2{
+  font-size: 2rem;
+  text-align: center;
+  
+
+}
+.para {
+  font-size: 150%;
+  text-align: justify;
+  width: 50%;
+  word-wrap: break-word;
+  
+}
+body {
+  margin: 0;
+  font-family: 'Prompt', sans-serif;
+  color: rgb(255, 255, 255);
+  background: #161515;
+  overflow-x: hidden;
 }
 
-#linkicon{
-  color: antiquewhite;
-  top: 65%;
-  left: 240%; 
-}
-#link{
+section {
   position: relative;
-  top: 60%;
-  left: 250%;  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 800px;
+  padding-top: 10px;
 }
+
+.blue {
+  background: #3c31dd;
+}
+
+.red {
+  background: #dd3f31;
+}
+
+.pink {
+  background: #ff0066;
+  overflow: hidden;
+}
+
+.dark {
+  background: #0f0f10;
+  min-height: auto;
+}
+
+.curve::before {
+  content: '';
+  display: block;
+  position: absolute;
+  border-radius: 100% 50%;
+  width: 55%;
+  height: 100%;
+  transform: translate(-110%,10%);
+  background-color: hsl(216, 21%, 16%);
+}
+
+.curve::after {
+  content: '';
+  display: block;
+  position: absolute;
+  border-radius: 100% 50%;
+  width: 55%;
+  height: 100%;
+  background-color: #e6e6e6;
+  transform: translate(40, 40px);
+ /* z-index: -1;*/
+}
+
+/* Bubble bg with plain CSS */
+
+.bubble::after {
+  content: '';
+  border-top-left-radius: 50% 100%;
+  border-top-right-radius: 50% 100%;
+  position: absolute;
+  bottom: 0;
+  z-index: -1;
+  width: 100%;
+  background-color: #0404e2;
+  height: 85%;
+  z-index: -1;
+}
+
+
+
 
