final draft: -fonts changed -contact and work pages updated -certification page removed -svg backgrounds added -css and htmal comments added

--- a/test.css
+++ b/test.css
@@ -2,7 +2,7 @@
 white
 
 */
-
+rgba(255, 255, 255, 0.457) .1em, transparent .1em), linear-gradient(90deg, rgba(188, 188, 188, 0.532) .1em, transparent .1em
 
 * {
     margin: 0;
