--- a/test.css
+++ b/test.css
@@ -1,325 +1,5 @@
-/*color pallet
-white
+.button{
+  position: sticky;
+  display: block;
 
-*/
-rgba(255, 255, 255, 0.457) .1em, transparent .1em), linear-gradient(90deg, rgba(188, 188, 188, 0.532) .1em, transparent .1em
-
-* {
-    margin: 0;
-    padding: 0;
-  }
-  
-  /*.container {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    scroll-behavior: smooth;
-    background: #1F2839;
-    font-family:'Times New Roman', Times, serif;
-   
-  }
-  
-  h1 a {
-  font-size: 80px;
-  color:#000000;
-  text-decoration: none;
-  text-transform: uppercase;
-  -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: #B69D74;
-  }
-  h2{
-  font-size: 40px;
-  color:#B69D74;
-  text-decoration: none;
-  text-transform: uppercase;
-  text-align: center;
-  }
-  
-  .popover {
-   display: none;
-   box-shadow: 0px 6px 8px #B69D74;
-  }
-  
-  .popover:target {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  }
-  
-  .popover .content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  width: 0;
-  height: 0;
-  color: #fff;
-  background-color:#B69D74;
-  animation: 1s grow ease forwards;
-  text-align: center;
-  }
-  
-  .nav_list  {
-  list-style-type: none;
-  }
-  
-  .nav_list a {
-  text-decoration: none;
-  font-size: 50px;
-  color: rgb(0, 0, 0);
-  }
-  
-  .nav_list_item {
-  height: 100%;
-  overflow: hidden;
-  }
-  
-  .nav_list li {
-  padding: 15px 0;
-  text-transform: uppercase;
-  transform: translateY(200px);
-  opacity: 0;
-  animation: 2s slideUp ease forwards .5s;
-  position: relative;
-  }
-  
-  .nav_list li::before {
-  content: '';
-  position: absolute;
-  height: 2px;
-  width: 0px;
-  left: 0;
-  bottom: 10px;
-  background: #000000; 
-  transition: all .5s ease;
-  }
-  
-  .nav_list li:hover:before {
-      width: 100%;
-  }
-  
-  .popover p {
-  padding: 50px;
-  opacity: 0;
-  animation: 1s fadeIn ease forwards 1s;
-  }
-  
-  .popover .close::after {
-  right: 0;
-  top: 0;
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  display: flex;
-  z-index: 1;
-  font-size: 30px;
-  align-items: center;
-  justify-content: center;
-  background-color: #000000;
-  color: #fff;
-  content: "x";
-  cursor: pointer;
-  opacity: 0; 
-  animation: 1s fadeIn ease forwards .5s;
-  }
-  
-  @keyframes grow {
-  100% {
-    height: 90%;
-    width: 90%;
-  }
-  }
-  
-  @keyframes fadeIn {
-  100% {
-  opacity: 1;
-  }
-  }
-  
-  @keyframes slideUp {
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-  }
-  html{
-    background-color: #1F2839;
-  }
-  
-  li{
-      list-style-type: none;
-  
-    }
-  
-  .title{
-    font-family:'Times New Roman';
-    font-size: 80px;
-    color:#000000;
-    text-transform:uppercase;
-    text-align: center;
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: #B69D74;
-    text-shadow: 10px 10px 10px rgba(212, 212, 212, 0.372);
-    }
-  .content{
-    color: #fff;
-  }
-  .slidebox{
-      width: 10%;
-      position: absolute;
-      transform: translate(-50%,-50%);
-      top: -5%;
-      left: 50%;
-      overflow: hidden;
-      border: 1px solid #000000;
-      box-shadow: -1px 5px 15px black;
-  }
-  .slides{
-    width: 100%;
-      display: flex;
-      animation: slide 20s infinite;
-  }
-  img{
-    width: 100%;
-  }
-  
-  @keyframes slide{
-    0%{
-        transform: translateX(0);
-    }
-    25%{
-        transform: translateX(0);
-    }
-    30%{
-        transform: translateX(-100%);
-    }
-    50%{
-        transform: translateX(-100%);
-    }
-    55%{
-        transform: translateX(-200%);
-    }
-    75%{
-        transform: translateX(-200%);
-    }
-    80%{
-        transform: translateX(-300%);
-    }
-    100%{
-        transform: translateX(-300%);
-    }
-  }
-  
-  .link{
-    opacity: 10;
-    position: absolute;
-    width: 150%;
-    font-size: 3rem;
-    z-index: 100;
-    top: 50%;
-    left: 2em;
-    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.372);
-  }
-  .block {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  #item {
-    font-size: 30px;
-    font-family: 'BioRhyme', serif;
-    width: initial;
-    height: 40px;
-    line-height: 40px;
-  }
-  
-  
-  #highlight {
-    display: inline-block;
-    position: absolute;
-    background-color: #F2BB05;
-    width: 150%;
-    font-size: 3rem;
-    z-index: 100;
-    top: 50%;
-    left: 2em;
-    transition: width 0.5s;
-    transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
-  }
-  
-  #item:hover #highlight{
-    
-    width: 300px; 
-  }*/
-
-  h1 {
-    font-size: 4rem;
-  }
-  p {
-    font-size: 1.5rem;
-  }
-  body {
-    margin: 0;
-    font-family: 'Prompt', sans-serif;
-    color: white;
-    background: #202731;
-    overflow-x: hidden;
-  }
-
-  section {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 400px;
-    padding-top: 100px;
-  }
-
-  .blue {
-    background: #3c31dd;
-  }
-
-  .red {
-    background: #dd3f31;
-  }
-
-  .curve {
-    position: absolute;
-    height: 250px;
-    width: 100%;
-    bottom: 0;
-    text-align: center;
-  }
-
-  .curve::before {
-    content: '';
-    display: block;
-    position: absolute;
-    border-radius: 100% 50%;
-    width: 55%;
-    height: 100%;
-    top: -10;
-    transform: translate(85%, 60%);
-    background-color: hsl(0, 0%, 0%);
-  }
-
-  .curve::after {
-    content: '';
-    display: block;
-    position: absolute;
-    border-radius: 100% 50%;
-    width: 55%;
-    height: 100%;
-    background-color: #cecece;
-    transform: translate(-4%, 40%);
-    z-index: -1;
-  }
+}
